--- a/MyerSplashWeb/index.html
+++ b/MyerSplashWeb/index.html
@@ -1,79 +1,82 @@
 <html>
-    
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>
-            MyerSplash
-        </title>
-        <link rel="stylesheet" type="text/css" href="css/style.css" />
-        <title>
-            MyerSplash
-        </title>
-    </head>
-    
-    <body>
-        <div class="rootDiv">
-            <div class="secondDiv">
-                <div class="titleDiv">
-                    <img class="logo" src="assets/logo.png"
-                    />
-                    <div class="div1">
-                        <span style="align:center" class="t1">
-                            Myer
-                        </span>
-                        <span style="align:center" class="t2">
-                            Splash
-                        </span>
-                    </div>
-                    <div class="div1">
-                        <span class="subTitle">
-                            FOR WINDOWS 10 & ANDROID
-                        </span>
-                    </div>
-                    <div>
-                        <span class="subTitle">
-                            One of the good-looking wallpaper app
-                        </span>
-                    </div>
-                    <a class="a1" id="btn1" style="margin-top:40px;" target="_blank" href="https://www.microsoft.com/en-us/store/p/myersplash/9nblggh4vcsn">
-                        <div>
-                            <img style="margin-left:20px;margin-top:12px;width:25px;" class="btnimage"
-                            src="assets/win.png" />
-                            <p class="btnp" style="display: block;float:left;margin-top:15px;margin-left:25px;font-size:15px;">
-                                WINDOWS STORE
-                            </p>
-                        </div>
-                    </a>
 
-                    <a class="a1" id="btn3" target="_blank" href="https://play.google.com/store/apps/details?id=com.juniperphoton.myersplash">
-                        <div>
-                            <img style="margin-left:20px;margin-top:10px;width:30px;" class="btnimage"
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>
+        MyerSplash
+    </title>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <style>
+        @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto:300');
+    </style>
+</head>
+
+<body style="font-family: 'Roboto', sans-serif;">
+    <div class="rootDiv">
+        <div class="secondDiv">
+            <div class="titleDiv">
+                <img class="logo" src="assets/logo.png" />
+                <div class="div1">
+                    <span style="align:center;font-family: 'Roboto Condensed', sans-serif;" class="t1">
+                        Myer
+                    </span>
+                    <span style="align:center;font-family: 'Roboto Condensed', sans-serif;" class="t2">
+                        Splash
+                    </span>
+                </div>
+                <div class="div1">
+                    <span class="subTitle" style="opacity:0.6;">
+                        for Windows 10 and Android
+                    </span>
+                </div>
+                <div style="margin-top:20px">
+                    <span class="subTitle">
+                        May be the best good-looking wallpaper app in Windows Store.
+                    </span>
+                </div>
+                <a class="a1" id="btn1" style="margin-top:40px;" target="_blank"
+                    href="https://www.microsoft.com/en-us/store/p/myersplash/9nblggh4vcsn">
+                    <div>
+                        <img style="margin-left:20px;margin-top:12px;width:25px;" class="btnimage"
+                            src="assets/win.png" />
+                        <p class="btnp"
+                            style="display: block;float:left;margin-top:15px;margin-left:25px;font-size:15px;">
+                            WINDOWS STORE
+                        </p>
+                    </div>
+                </a>
+
+                <a class="a1" id="btn3" target="_blank"
+                    href="https://play.google.com/store/apps/details?id=com.juniperphoton.myersplash">
+                    <div>
+                        <img style="margin-left:20px;margin-top:10px;width:30px;" class="btnimage"
                             src="assets/android.png" />
-                            <p class="btnp" style="display: block;float:left;margin-top:15px;margin-left:20px;font-size:15px;">
-                                GOOGLE PLAY
-                            </p>
-                        </div>
-                    </a>
-                    <a class="a1" id="btn4" target="_blank" href="http://juniperphoton.net/myersplash/myersplash.apk">
-                        <div>
-                            <img style="margin-left:20px;margin-top:10px;width:30px;" class="btnimage"
+                        <p class="btnp"
+                            style="display: block;float:left;margin-top:15px;margin-left:20px;font-size:15px;">
+                            GOOGLE PLAY
+                        </p>
+                    </div>
+                </a>
+                <a class="a1" id="btn4" target="_blank" href="http://juniperphoton.net/myersplash/myersplash.apk">
+                    <div>
+                        <img style="margin-left:20px;margin-top:10px;width:30px;" class="btnimage"
                             src="assets/download.png" />
-                            <p class="btnp" style="display: block;float:left;margin-top:15px;margin-left:20px;font-size:15px;">
-                                DOWNLOAD APK
-                            </p>
-                        </div>
-                    </a>
-                    <a class="a2" id="btn2" style="margin-top:20px;" target="_blank" href="http://juniperphoton.net/myerlist/">
-                        <div>
-                            <p class="subTitle" style="display: block;float:left;margin-top:0px;margin-left:10px;font-size:15px;">
-                                JUNIPERPHOTON'S OTHER APPS
-                            </p>
-                        </div>
+                        <p class="btnp"
+                            style="display: block;float:left;margin-top:15px;margin-left:20px;font-size:15px;">
+                            DOWNLOAD APK
+                        </p>
+                    </div>
+                </a>
+                <div class="credit" style="margin-top:30px;">
+                    <a target="_blank" style="color:white;"
+                        href="https://github.com/JuniperPhoton/MyerSplashUWP">
+                        Visit it on GitHub
                     </a>
                 </div>
             </div>
         </div>
-    </body>
+    </div>
+</body>
 
 </html>
